# wyzoid

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE.md  README.md  ex.ppm  rbga_noise.ppm  red.csv  watcher.sh
examples/basic/: main.rs
examples/dataviz/: main.rs
examples/multiplebuffer/: main.rs
examples/multiplebuffershader/: main.rs
examples/reduce/: main.rs
examples/shaders/src/examples/: add_sub.cs  bitonic1.cs  double.cs  fbm.cs  multiply.cs  oddeven.cs  reduce.cs  shared.cs  taylor.cs  turbo.cs
examples/shared/: main.rs
examples/sorting/: main.rs
examples/uniforms/: main.rs
shaders/src/cs_test/: particles.cs
shaders/src/double/: bitronic.cs  double.cs  taylor.cs
shaders/src/fs_vs_test/: split.fs  split.vs
src/: lib.rs  main.rs
src/high/: mod.rs
src/high/def/: mod.rs
src/high/job/: mod.rs
src/high/states/: mod.rs
src/low/: mod.rs
src/low/vkcmd/: mod.rs
src/low/vkdescriptor/: mod.rs
src/low/vkfence/: mod.rs
src/low/vkmem/: mod.rs
src/low/vkpipeline/: mod.rs
src/low/vkshader/: mod.rs
src/low/vkstate/: mod.rs
src/utils/: mod.rs
src/vkcmd/: mod.rs
src/vkdescriptor/: mod.rs
src/vkmem/: mod.rs
src/vkpipeline/: mod.rs
src/vkshader/: mod.rs
src/vkstate/: mod.rs
