[package]
name = "wyzoid"
version = "0.1.0"
authors = ["Maël <contact@maeln.com>"]
edition = "2018"
license = "CECILL-2.1"
readme = "README.md"
repository = "https://github.com/maeln/wyzoid"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.13"
csv = "1.1.1"
