[package]
name = "wyzoid"
version = "0.1.2"
authors = ["Maël Naccache Tüfekçi <contact@maeln.com>"]
edition = "2018"
license = "CECILL-2.1"
readme = "README.md"
repository = "https://github.com/maeln/wyzoid"
keywords = ["vulkan", "ash", "gpgpu", "compute", "shader"]
description = "Wyzoid is a small framework made to easily experiment with compute shader / GPGPU."


[profile.release]
opt-level = 3
debug = true
lto = true

[dependencies]
rand = "0.7"
ash = "0.29"
log = "0.4"
